force-app/main/default/objects/Vehicle_Information__dlm/Vehicle_Information__dlm.object-meta.xml
<CustomObject>
    <label>Vehicle Information</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Vehicle Information</labelOverride>
        <masterLabel>Vehicle Information</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataModelAttributes>
</CustomObject>