force-app/main/default/objects/Vehicle_Information__dlm/fields/KQ_OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>KQ_OwnerEmail__c</fullName>
    <label>Key Qualifier OwnerEmail</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier OwnerEmail</labelOverride>
        <masterLabel>Key Qualifier OwnerEmail</masterLabel>
        <refAttrDeveloperName>KQ_OwnerEmail</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>