force-app/main/default/objects/Vehicle_Information__dlm/fields/KQ_VIN__c.field-meta.xml
<CustomField>
    <fullName>KQ_VIN__c</fullName>
    <label>Key Qualifier VIN</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier VIN</labelOverride>
        <masterLabel>Key Qualifier VIN</masterLabel>
        <refAttrDeveloperName>KQ_VIN</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>