force-app/main/default/objects/Vehicle_Information__dlm/fields/LastServiceDate__c.field-meta.xml
<CustomField>
    <fullName>LastServiceDate__c</fullName>
    <label>LastServiceDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>LastServiceDate</labelOverride>
        <masterLabel>LastServiceDate</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>