force-app/main/default/objects/Vehicle_Information__dlm/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <label>OwnerEmail</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>OwnerEmail</labelOverride>
        <masterLabel>OwnerEmail</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>