force-app/main/default/objects/Vehicle_Information__dlm/fields/OwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhone__c</fullName>
    <label>OwnerPhone</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>OwnerPhone</labelOverride>
        <masterLabel>OwnerPhone</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>