force-app/main/default/objects/Vehicle_Information__dlm/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <label>RegistrationNumber</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>RegistrationNumber</labelOverride>
        <masterLabel>RegistrationNumber</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>