force-app/main/default/objects/Vehicle_Information__dlm/fields/rel_1757241380485_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1757241380485_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle_Information_OwnerEmail_map_s_rel</label>
    <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
    <relationshipLabel>Vehicle_Information_OwnerEmail_map_s_rel</relationshipLabel>
    <relationshipName>rel_1757241380485_end</relationshipName>
    <type>Lookup</type>
</CustomField>